--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0-alpha1",
+    "heroicons-react": "^1.4.1",
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
